clasp 3.1.4:
  * fixed: "--backprop" failed to backpropagte certain constraints when used with "--eq=0"
  * fixed: potential deadlock during shutdown/join() in async solving
  * fixed: invalid delete in DomainHeuristic destructor
  * fixed: configuration sometimes failed to initialize solver id
  * rewrote Clause::updateWatch() loop to workaround bug #67892 in gcc 5
    (https://gcc.gnu.org/bugzilla/show_bug.cgi?id=67892)

clasp 3.1.3: Friday, 31th July 2015
  * fixed: possible livelock in multi-threaded enumeration of optimal models
  * fixed: parser for _heuristic atoms failed to handle atoms containing strings
  * fixed: over-satisfied PB constraints not always handled correctly
  * fixed: incorrect handling of aux vars in Solver::numWatches()
  * fixed: C++11 isnan issue on Mac
  
clasp 3.1.2: Tuesday, 5th May 2015
  * fixed: Option "--heuristic" failed to accept decay factor for domain heuristic
  * fixed: LogicProgram::getDisjFor() failed to handle hash collisions correctly
  * fixed: facts in disjunctions not always correctly handled
  * fixed: domain heuristic failed to distinguish atom names sharing a common prefix
  * fixed: domain heuristic failed to handle atoms with complementary literals correctly
  * fixed: LogicProgram::write() must not output gamma rules and/or atoms that are false
  * fixed regression in handling of sign modifier in domain heuristic
  * fixed regression in backpropagation during preprocessing

clasp 3.1.1: Wednesday, 12th November 2014
  * LparseReader now handles "external statement"
  * fixed: low-level config interface failed to correctly handle successive changes of "opt-bound"
  * fixed: wrong completition nogoods with option "--no-gamma"
  * fixed regression in rule simplification (regression in 3.0.x)
  * fixed regression in "--configuration=jumpy"
  * fixed regression in handling of modifiers true/false in domain heuristic
  
clasp 3.1.0: Friday, 15th August 2014